[gd_scene load_steps=16 format=3 uid="uid://btvenhfnkmpvo"]

[ext_resource type="Script" path="res://scripts/EProyectil.gd" id="1_kudu8"]
[ext_resource type="PackedScene" uid="uid://cwppo2nkl31qf" path="res://assets/scenes/enemies/bullet_enemy.tscn" id="2_wi6tc"]
[ext_resource type="Texture2D" uid="uid://bynfv1ax2k7e2" path="res://assets/textures/Enemies.png" id="2_yf5yf"]
[ext_resource type="AudioStream" uid="uid://m21omrej4p8f" path="res://assets/sounds/sfx/Bullet.wav" id="4_7vk03"]
[ext_resource type="AudioStream" uid="uid://dg3so0ksoq2gd" path="res://assets/sounds/sfx/EShootDeath.wav" id="5_71mhl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4xlvo"]
atlas = ExtResource("2_yf5yf")
region = Rect2(208, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdt0s"]
atlas = ExtResource("2_yf5yf")
region = Rect2(192, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye377"]
atlas = ExtResource("2_yf5yf")
region = Rect2(48, 195, 16, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_boxdd"]
atlas = ExtResource("2_yf5yf")
region = Rect2(64, 195, 16, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_fboom"]
atlas = ExtResource("2_yf5yf")
region = Rect2(80, 195, 16, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq5by"]
atlas = ExtResource("2_yf5yf")
region = Rect2(96, 195, 16, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_2byne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xlvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdt0s")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye377")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boxdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fboom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq5by")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojmo0"]
size = Vector2(8.5, 5.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gj32"]
size = Vector2(11, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4i0b"]
size = Vector2(7, 2)

[node name="EBullet" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_kudu8")
follow_speed = 15
time_between_shots = 2.0
bullet_scene = ExtResource("2_wi6tc")
speed = 8

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(1, 0.961538)
sprite_frames = SubResource("SpriteFrames_2byne")
animation = &"death"
autoplay = "walk"

[node name="RayCast2D" type="RayCast2D" parent="AnimatedSprite2D"]
position = Vector2(3, 4.16)
target_position = Vector2(0, 6)

[node name="HitboxArea" type="Area2D" parent="."]
position = Vector2(0, -0.25)
scale = Vector2(1, 0.961538)
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0.25, 0.26)
shape = SubResource("RectangleShape2D_ojmo0")

[node name="HurtboxArea" type="Area2D" parent="."]
collision_mask = 8

[node name="HurtboxShape" type="CollisionShape2D" parent="HurtboxArea"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_4gj32")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_v4i0b")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(12, -3)

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
position = Vector2(-1, 1)
target_position = Vector2(-120, 0)
collision_mask = 2

[node name="RightCast2D" type="RayCast2D" parent="."]
position = Vector2(-1, 1)
target_position = Vector2(120, 0)
collision_mask = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.996

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7vk03")
volume_db = -17.652
pitch_scale = 0.9

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_71mhl")
volume_db = -16.522
pitch_scale = 0.45

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HitboxArea" to="." method="_on_hitbox_area_body_entered"]
[connection signal="area_entered" from="HurtboxArea" to="." method="_on_hurtbox_area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
